@@ -1,9 +1,3 @@
-DIST ganeti-instance-image-0.3.1.tar.gz 71014 RMD160 675f4a42eaa70d0edc82cc161963bd85ed4b3eb0 SHA1 82eb471d5e5d8415b9758535f351bac7d518cce4 SHA256 415d018be07314d5c89fffd21369ad85501d8bd88369059f765554e774e46afc
-DIST ganeti-instance-image-0.3.tar.gz 70871 RMD160 cd66573aaed00ba4b151a9874b118908b740c73d SHA1 740b14a9e3983688c9148c16a1e2562c6f39e554 SHA256 6df736fe767b068ce31b89771c2f666a5ee15bbad22436ca46fdd985faa00100
-DIST ganeti-instance-image-0.4.tar.gz 71730 RMD160 f553a3a1df0016b5bf356fce65744ec640b64706 SHA1 810bb7a45b7a17942e5705c475dd1abb528cff69 SHA256 e36a470deb5789ba8a08bb6f044c7e7ed50bd23f50c5cd66c97f0057e69256fc
-EBUILD ganeti-instance-image-0.3.1.ebuild 1028 RMD160 cb9e724f10e18a42df4446d08fd4c6dd36ce396e SHA1 1aad7b74f04672908f41339822c814fa8dd4c8d9 SHA256 456baf542706797691d462b9dd473be3834ad3a09e86180d9f092606ecf14893
-EBUILD ganeti-instance-image-0.3.ebuild 1028 RMD160 cb9e724f10e18a42df4446d08fd4c6dd36ce396e SHA1 1aad7b74f04672908f41339822c814fa8dd4c8d9 SHA256 456baf542706797691d462b9dd473be3834ad3a09e86180d9f092606ecf14893
-EBUILD ganeti-instance-image-0.4.ebuild 1028 RMD160 cb9e724f10e18a42df4446d08fd4c6dd36ce396e SHA1 1aad7b74f04672908f41339822c814fa8dd4c8d9 SHA256 456baf542706797691d462b9dd473be3834ad3a09e86180d9f092606ecf14893
 EBUILD ganeti-instance-image-9999.ebuild 1018 RMD160 f8ef6feed131a96d4b6982184928c3b3a6b0c3d0 SHA1 8854774d051e00f4dee70fa08d6fda0c0c02b5c2 SHA256 721f25473ae8ea045cddd7fb0798a1edcb1d23453cd0df7b8a42c6d93982c7f3
-MISC ChangeLog 1169 RMD160 b1f973f5be9492bf68a0e8d5818f835e5999d79e SHA1 ca03fe1a4d925abde9912d4db944e5fb57c9aeee SHA256 5454cdfe94df4ba51a1c9a428497ddf2c4f5c450a657f5713f9fae80a9f60571
+MISC ChangeLog 1344 RMD160 aaed64eaa577d88244d648120d72e0ba8cdee353 SHA1 24a79a64ed85d0b6ac405cff4620eccb5b284bc0 SHA256 49d165fe7735458a3bede0747ba2938e6ce7fa8f285d73762027c1397ff1d013
 MISC metadata.xml 301 RMD160 759f51dcb64d85eee294cf160d7eedff66f3c6f6 SHA1 36446536d5452b1771f375c9d6fbf867bb705587 SHA256 a1d5a7bd389d314377303e077893dcae8ed0c8bd5bf4389c384d751704c27b2d
